@@ -1,1 +1,1 @@
-#define TAGSISTANT_BUILDNUMBER "20130726.000019"
+#define TAGSISTANT_BUILDNUMBER "20130727.000029"
